--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <h1>"Flexbox: O Guia Simples para Layouts Flexíveis"</h1>
+
     <section id="intro">
         <h2>O que é Flexbox?</h2>
         <p>Flexbox é um módulo de layout do CSS que facilita a criação de layouts flexíveis e responsivos. Com o Flexbox, você pode organizar seus elementos na página de maneira eficiente, mesmo quando as dimensões dos elementos são dinâmicas ou desconhecidas</p>
     </section>
+
     <section id="conceitos">
         <h2>Como Funciona o Flexbox?</h2>
         <p>Flexbox organiza elementos em um contêiner principal chamado 'container flex'. Dentro desse contêiner, os elementos filhos são chamados de 'itens flex'. O grande diferencial do Flexbox é que ele permite distribuir espaço entre os itens e alinhar esses itens de maneira previsível, mesmo que o tamanho de um ou mais itens seja desconhecido ou dinâmico.</p>    
     </section>
+
     <section id="container">
         <h2>Propriedades Principais do Container Flex</h2>
         <ul>
@@ -26,9 +29,10 @@
             Define a direção dos itens flexíveis. Pode ser row (linha), column (coluna), entre outros.
                 </li> 
             <li>justify-content
-            Controla o alinhamento dos itens ao longo do eixo principal. Permite centralizar, distribuir espaço igualmente, etc.</li>                                 
+            Controla o alinhamento dos itens ao longo do eixo principal. Permite centralizar, distribuir espaço igualmente, etc.<li>                                 
         </ul>  
     </section>
+
     <section id="itensflex">
         <h2>Propriedades dos Itens Flexíveis</h2>
         <ul>
@@ -40,6 +44,27 @@
             <li>align-self
                 Permite que um único item flex se alinhe diferentemente dos outros ao longo do eixo transversal.</li>                               
         </ul>  
-    </section>    
+    </section>
+
+    <section id="pai">
+								<h2>Propriedades para elemento - Pai</h2>
+								<p></p>
+			</section>
+
+			<section id="filho">
+								<h2>Propriedades para elemento - Filho</h2>
+								<p></p>
+			</section>
+
+			<section id="importante">
+								<h2>Importante</h2>
+								<p></p>
+			</section>
+
+			<section id="links">
+								<h2>links Importantes</h2>
+								<p></p>
+			</section>
+
 </body>
 </html>
