--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -3,22 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
-    <style>
-        .container {
-            display: flex;
-            border: 2px solid black;
-            height: 200px;
-            margin-bottom: 20px;
-        }
-        .item {
-            background-color: lightblue;
-            border: 1px solid blue;
-            padding: 10px;
-            margin: 5px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container flex-direction">
