--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -1,56 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Container</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container flex-direction">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-    </div>
-    <div class="container flex-wrap">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-    </div>
-    <div class="container justify-content">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-    </div>
-    <div class="container align-items">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-    </div>
-    <div class="container align-content">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-    </div>
-    <div class="container align-self">
-        <div class="item">1</div>
-        <div class="item" style="align-self: flex-end;">2</div>
-        <div class="item">3</div>
-    </div>
-    <div class="container flex">
-        <div class="item" style="flex: 1;">1</div>
-        <div class="item" style="flex: 2;">2</div>
-        <div class="item" style="flex: 1;">3</div>
-    </div>
-    <div class="container flex-grow-shrink-basis">
-        <div class="item" style="flex-grow: 1; flex-shrink: 1; flex-basis: 100px;">1</div>
-        <div class="item" style="flex-grow: 2; flex-shrink: 1; flex-basis: 100px;">2</div>
-        <div class="item" style="flex-grow: 1; flex-shrink: 1; flex-basis: 100px;">3</div>
+    <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
 </body>
 </html>
