--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -7,10 +7,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+    <div id="ex1">
+        <li>item 1 </li>
+        <li>item 2 </li>
+        <li>item 3 </li>
+    </div>
+    <br>
+    <div id="ex2">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex3">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex4">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex5">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex6">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex7">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <br>
+    <div id="ex8">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
     </div>
 </body>
 </html>
