--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -42,6 +42,46 @@
         <li>item 2</li>
         <li>item3</li>
     </div>
+    <div id="ex7">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex8">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex9">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex10">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex11">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex12">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex13">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
+    <div id="ex14">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
     <br>
   
 </body>
