--- a/trabalho_flexbox/index.html
+++ b/trabalho_flexbox/index.html
@@ -7,55 +7,92 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <article>
+        <h1>Para que serve o Flexbox?</h1>
+      <p>
+        O Flexbox é um conjunto de propriedades do CSS que te ajudam a organizar elementos dentro de um container de forma muito mais fácil e intuitiva.
+        Com ele, você pode alinhar elementos, distribuir espaço, criar layouts responsivos, organizar elementos em linhas ou colunas e até mesmo criar
+        layouts complexos combinando diversas propriedades.
+      </p>
+      <h2>
+            Essa propriedade define a direção dos itens dentro do contêiner.
+       </h2>
+       <br>
+      <p>o Flex direction "ROW" mantem a ordem em linha:</p>
     <div id="ex1">
         <li>item 1 </li>
         <li>item 2 </li>
         <li>item 3 </li>
     </div>
     <br>
+     <p>Ja se usarmos o Flex direction "COLUMN" ordena em coluna:</p>
     <div id="ex2">
         <li>item 1</li>
         <li>item 2</li>
         <li>item3</li>
     </div>
     <br>
+    <h2>O justify-content alinha os itens ao longo do eixo principal.</h2>
+    <br>
+    <p>Com o center os ítens são centralizados na linha</p>
     <div id="ex3">
         <li>item 1</li>
         <li>item 2</li>
         <li>item3</li>
     </div>
     <br>
+    <p>O Space Between os ítens são distribuídos igualmente ao longo da linha</p>
     <div id="ex4">
         <li>item 1</li>
         <li>item 2</li>
         <li>item 3</li>
     </div>
     <br>
+    <p>
+            Com o Space Around o espaçamento é distribuido ao longo da linha
+    </p>
     <div id="ex5">
         <li>item 1</li>
         <li>item 2</li>
         <li>item3</li>
     </div>
     <br>
+    <p>
+            Usando o Space Evenly os ítens são distribuídos de forma que o
+            espaçamento entre quaisquer dois itens da linha (incluindo entre os
+            ítens e as bordas) seja igual.
+          </p>
     <div id="ex6">
         <li>item 1</li>
         <li>item 2</li>
         <li>item3</li>
     </div>
+
+    <p>Ja no Flex End ocorre o contrario onde os ítens são alinhados junto à borda final:</p>
     <div id="ex7">
         <li>item 1</li>
         <li>item 2</li>
         <li>item3</li>
     </div>
+    <p>
+        Combina as propriedades flex-direction e flex-wrap em uma únicalinha.  
+    </p>
     <div id="ex8">
         <li>item 1</li>
         <li>item 2</li>
-        <li>item3</li>
+        <li>item 3</li>
+        <li>item 4</li>
+
     </div>
+    <br>
+    <p>Define os itens para quebrar em várias linhas.</p>
     <div id="ex9">
         <li>item 1</li>
         <li>item 2</li>
-        <li>item3</li>
+    <div id="ex8">
+        <li>item 3</li>
+        <li>item 4</li>
+    </div>
     </div>
     <div id="ex10">
         <li>item 1</li>
@@ -82,7 +119,12 @@
         <li>item 2</li>
         <li>item3</li>
     </div>
+    <div id="ex15">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </div>
     <br>
-  
+  </article>
 </body>
 </html>
